--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">L4Tutor2</string>
+    <string name="RegisterBtn">הרשמה</string>
+    <string name="approvedRgisterationFormBtn">אישור הרשמה</string>
 </resources>
