--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">L4Tutor2</string>
     <string name="RegisterBtn">הרשמה</string>
     <string name="approvedRgisterationFormBtn">אישור הרשמה</string>
+    <string name="loginBtnString">התחברות</string>
 </resources>
